--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       Learnathon Platformer
     </title>
     <link rel='stylesheet' type='text/css' href='css/style.css' />
-  </head>
-  <body>
-    <script type='text/javascript' src='lib/p5.min.js'></script>
+    <script type='text/javascript' src='lib/p5.js'></script>
     <script type='text/javascript' src='lib/p5.play.js'></script>
     <script type='text/javascript' src='src/platformer.js'></script>
+  </head>
+  <body>
   </body>
 </html>
